// coupon.proto
syntax = "proto3";


package coupon;

service CouponGrpcController {
  rpc registerCoupon (RegisterCoupon) returns (RegisterCouponResponse) {}
  rpc getCoupons (GetCouopns) returns (GetCouponResponse) {}
  rpc updateCoupon (UpdateCoupon) returns (OkResponse) {}
  rpc issueCoupon (IssueCoupon) returns (OkResponse) {}
  rpc useCoupon (UseCoupon) returns (OkResponse) {}
  rpc cancleCoupon (CancleCoupon  ) returns (OkResponse) {}
}

//// dto (request)
message RegisterCoupon {
  string couponActiveStartDate = 1;
  string couponActiveEndDate = 2;
  DISCOUNT_TYPE discountType  = 3;
  int32 discountValue = 4;
  int32 issueLimit = 5;
}

message GetCouopns {
  int32 page = 1;
  int32 size = 2;
  string issuerUuid = 3;
  string  requestDate = 4;
}

message UpdateCoupon {
  string couponUuid = 1;
  string couponActiveStartDate = 2;
  string couponActiveEndDate = 3;
  DISCOUNT_TYPE discountType  = 4;
  int32 discountValue = 5;
  int32 issueLimit = 6;
}

message IssueCoupon {
  string couponUuid = 1;
  string issuerUuid = 2;
  string couponIssuedStartDate = 3;
}

message UseCoupon {
  string couponUuid = 1;
  string productUuid = 2;
  string issuerUuid = 3;
  string useRequestDate = 4;
}

message CancleCoupon {
  string couponUuid = 1;
  string issuerUuid = 2;
}


////  dto (response)
message RegisterCouponResponse  {
  string statusCode = 1;
  string message = 2;
  CouponUuid data = 3;

  message CouponUuid  {
    string couponUuid = 1; 
 }
}

message GetCouponResponse  {
  string statusCode = 1;
  string message = 2;
  repeated Coupon data = 3;
}

message OkResponse {
  string statusCode = 1;
  string message = 2;
}

//enum | object
enum DISCOUNT_TYPE{
  RATE = 0;
  AMOUNT = 1;
}

message Coupon  {
  int32 issueLimit = 1;
  DISCOUNT_TYPE discountType = 2;
  int32 discountValue = 3;
  string couponActiveStartDate = 4;
  string  couponActiveEndDate = 5;
  string couponId = 6;
  string couponUuid = 7;
}
